test/core/errors/literals_error/zs/octal_string_literal_error.zs
package octal_string_literal_error;

const string OCTAL_STRING_LITERAL = "This is wrong escaped octal character \09";
